--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.16",
+    "@mui/x-data-grid": "^6.18.0",
+    "@mui/x-date-pickers": "^6.18.0",
     "commitizen": "^4.3.0",
+    "dayjs": "^1.11.10",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-unused-imports": "^3.0.0",
     "react": "^18.2.0",
