--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,20 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl" :".",
+    "baseUrl": ".",
 
     "paths": {
-      "@/components*":["./src/components/*"]
+      "@/components*": ["./src/components*"],
+      "@/enums*": ["./src/enums*"],
+      "@/hooks*": ["./src/hooks*"],
+      "@/interfaces*": ["./src/interfaces*"],
+      "@/pages*": ["./src/pages*"],
+      "@/schemas*": ["./src/schemas*"],
+      "@/styles*": ["./src/styles*"],
+      "@/utils*": ["./src/utils*"],
+      "@/requests*": ["./src/requests*"],
+      "@/types*": ["./src/@types*"],
+      "@/redux*": ["./src/redux*"],
     },
 
     /* Linting */
