--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@mui/material": "^5.14.16",
     "@mui/x-data-grid": "^6.18.0",
     "@mui/x-date-pickers": "^6.18.0",
+    "@redux-devtools/extension": "^3.2.6",
     "commitizen": "^4.3.0",
     "dayjs": "^1.11.10",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-unused-imports": "^3.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
